--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,12 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -29,7 +35,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -37,6 +43,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation 'com.google.android.material:material:1.1.0'
+
     implementation 'com.yanzhenjie.andserver:api:2.1.1'
     annotationProcessor 'com.yanzhenjie.andserver:processor:2.1.1'
+
+    implementation 'com.alibaba:fastjson:1.1.71.android'
+    implementation 'org.apache.commons:commons-lang3:3.9'
+    implementation 'com.yanzhenjie:loading:1.0.0'
 }
